<resources>

    <string name="app_name">"智能情景模式"</string>
    <string name="menu_settings">"设置"</string>
    <string name="title_activity_main">"智能情景模式"</string>
    <string name="item_edit">"编辑"</string>
    
    <string name="pre_profiles">"预设模式"</string>
    <string name="custom_profiles">"自定义模式"</string>
	<string name="profileNameDeafult">"标准"</string>
	<string name="profileNameSlient">"静音"</string>
	<string name="profileNameWork">"会议"</string>
	<string name="profileNameConference">"会议"</string>
	<string name="profileNameOutdoor">"户外"</string>
	
	<string name="profile_name_section">名称</string>
	<string name="volume_setting_section">音量</string>
	<string name="media_volume_title">"音乐、视频、游戏和其他媒体"</string>
	<string name="ring_volume_title">"铃声和通知"</string>
	<string name="notification_volume_title">"系统通知"</string>
	<string name="alarm_clock_volume_title">"闹钟"</string>
	
	<string name="profile_general_section">"常规"</string>
	
	<string name="volume_virbator_section">"音量和震动"</string>
	<string name="virbator_title">"响铃时振动"</string>
	<string name="virbator_mute_title">"振动"</string>
	<string name="virbator_summary">"设定当来电时振动"</string>
	
	<string name="ring_section">"铃声"</string>
	<string name="ring_tone_title">"来电铃声"</string>
	<string name="notification_tone_title">"通知铃声"</string>
	<string name="alarm_tone_title">闹钟铃声</string>
	
	<string name="rename">"重命名"</string>
	<string name="delete">"删除"</string>
	<string name="add">"新增"</string>
	<string name="reset">"重置"</string>
	
	<string name="ringtone_unkown">"未设置铃声"</string>
	<string name="ringtong_default">"默认铃声"</string>
	<string name="notification_default">"默认通知"</string>
	<string name="alarm_default">"默认闹钟"</string>
	<string name="ringtone_slient">"静音"</string>
	
	<string name="edit_tip">"在此输入新的名称"</string>
	<string name="add_profile_title">"添加新的情景模式"</string>
	<string name="profile_name_exist">"名称已存在"</string>
	<string name="profile_name_cannot_null">"名称不能为空"</string>
	<string name="profile_name_too_long">"名称过长"</string>
	
	<string name="delete_profile_confirm">"确认提示"</string>
	<string name="delete_profile_confirm_msg">"确定删除"</string>
	<string name="reset_profile_confirm">"重置提示"</string>
	<string name="reset_profile_confirm_msg">"确定重置情景模式到初始状态(这将会删除所有自定义的情景模式)？"</string>
	<string name="delete_toast_activing">"不能删除正在应用的情景模式"</string>
	<string name="delete_toast_default">"不能删除预设情景模式"</string>
	
	<string name="select_profile">"选择情景模式"</string>
	<string name="about">"关于我们"</string>
	<string name="about_introduce_title">"产品简介"</string>
	<string name="about_introduce">"    智能情景模式，是一个比较实用的小工具，我们提供了四种常用的情景模式供用户选择：标准、静音、会议和户外，用户还可以根据自己的需求自定义自己想要的情景模式，非常实用、方便。
	    \n    我们会不断改进软件的性能以及用户的体验，感谢您的实用！"</string>
	<string name="about_connection">"联系我们"</string>
	<string name="about_statement">"    如您在使用过程中有任何疑问或软件错误，您可以通过以下方式联系我们，期待与您交流。"</string>
	<string name="about_email">"邮箱：xlog2013@163.com"</string>
	<string name="about_version">"版本"</string>
	<string name="about_version_code">"v1.3"</string>
	
</resources>