<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" 
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:background="#CCE0EEE0"
            android:gravity="center_vertical|left"
            android:text="@string/about_introduce_title"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/introduce"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="@string/about_introduce" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="©2013 Dreamlink" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:background="#CCE0EEE0"
            android:gravity="center_vertical|left"
            android:text="@string/about_connection"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/about_connection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="@string/about_statement" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="@string/about_email" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:background="#CCE0EEE0"
            android:gravity="center_vertical|left"
            android:text="@string/about_version"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/about_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:src="@drawable/icon2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/version_code" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>