<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/media_v_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:text="@string/media_volume_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dip" >

            <ImageView
                android:id="@+id/media_volume_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip"
                android:src="@drawable/media_volume_light" />

            <SeekBar
                android:id="@+id/seekbar_media_v"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip" />
        </LinearLayout>

        <TextView
            android:id="@+id/ring_v_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:text="@string/ring_volume_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dip" >

            <ImageView
                android:id="@+id/ring_volume_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip"
                android:src="@drawable/ring_volume_light" />

            <SeekBar
                android:id="@+id/seekbar_ring_v"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip" />
        </LinearLayout>

        <!-- <TextView -->
        <!-- android:id="@+id/notification_v_text" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="20dip" -->
        <!-- android:layout_marginRight="20dip" -->
        <!-- android:text="@string/notification_volume_title" -->
        <!-- android:textAppearance="?android:attr/textAppearanceMedium" /> -->


        <!-- <SeekBar -->
        <!-- android:id="@+id/seekbar_notification_v" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:paddingTop="20dip" -->
        <!-- android:paddingRight="15dip" -->
        <!-- android:paddingBottom="20dip" -->
        <!-- android:paddingLeft="15dip" -->
        <!-- /> -->

        <TextView
            android:id="@+id/alarm_v_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:text="@string/alarm_clock_volume_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dip" >

            <ImageView
                android:id="@+id/alarm_volume_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip"
                android:src="@drawable/alarm_volume_light" />

            <SeekBar
                android:id="@+id/seekbar_alarm_v"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="20dip" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>